--- a/public/web_template/css/style.css
+++ b/public/web_template/css/style.css
@@ -499,7 +499,7 @@
 }
 
 .footer .footer-item .btn-link:hover {
-  color: var(--bs-secondary) !important;
+  color: var(--bs-primary) !important;
 }
 
 .footer .footer-item p.mb-4 {
